# gfm-online-judge-description-tool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  en.html  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/workflows/: deploy.yml
_app/: version.json
_app/immutable/assets/: 0.By_V0f68.css  0.DkoBFogE.css  _layout.BVDDVjL-.css  _layout.ChG3ajF8.css  _layout.DleE0fWK.css  _page.B14ulwnN.css  _page.BAduekZ5.css  gfmdesc.3Admt13o.wasm  gfmdesc.B_AgPMc-.wasm  gfmdesc.D6zmZXcZ.wasm  gfmdesc.qa5b-kth.wasm
_app/immutable/chunks/: 44I5aYyA.js  B2f4YuC0.js  B4USY6FJ.js  B6KhtDOt.js  B7ves9sk.js  BB4EWoRI.js  BG5Hfe2F.js  BJ8kVbsl.js  BLLr3nDj.js  BMn53ut4.js  BPiplBEc.js  BR4IngUt.js  BST8hD0o.js  BUhTXg-r.js  BXwer1lP.js  Bg_qMcPw.js  BnsJpdVR.js  BsSQxw4p.js  Bve2-E57.js  BwwY6OWs.js  ByeHBOoz.js  C7hY91FL.js  CcXH1vup.js  CfXRqCZ7.js  Cfk_qBgB.js  CiTCvI3m.js  Cs3ROBHK.js  D5rIa85s.js  D69dNfDS.js  DDtYQ3ip.js  DSDmgAzN.js  DYh9jGLF.js  Deit5qAM.js  Di4OxQdd.js  DnTUbyoG.js  DsSi8cA9.js  Kr3AUYcH.js  UOtkdiZ1.js  YAmHtfZa.js  entry.CuuZwBxo.js  (+44 more)
_app/immutable/entry/: app.B97nW-r3.js  app.BTuBQaQL.js  app.Bi-UqY3Q.js  app.Bzmv3Vdw.js  app.C6919gR-.js  app.CKs1uW9t.js  app.CcrMYGtM.js  app.CuLnoxKb.js  app.DGTYQ-N0.js  app.DncQr4nX.js  app.UqtwfQee.js  app.n5N704vC.js  start.B4iOnksJ.js  start.BPROqM6W.js  start.BaZBFXSv.js  start.CDWcGs4K.js  start.CPNi-cCk.js  start.CjX8_vuF.js  start.Dq4G1jLv.js  start.DqUnf3fY.js  start.DwQIwRFv.js  start.Li8KcSs8.js  start.kcK9RO8P.js  start.tPy--Y1A.js
_app/immutable/nodes/: 0.BaGFe2ML.js  0.BmHPIaHC.js  0.BoYlIZ9x.js  0.Bvk2-CKe.js  0.C0fQEuUo.js  0.CA2mpkT2.js  0.CPYh_6gO.js  0.CYPw0Q-w.js  0.CrQ7NwrT.js  0.MvzXbF4d.js  0.RrpaSJnA.js  0.flPxDNFN.js  1.5xYX7nt1.js  1.BS10PsUF.js  1.BjiUfwiw.js  1.Bl_Hk6mC.js  1.Bp9hwcRW.js  1.CCqgXyBg.js  1.CZFiQqrt.js  1.CfN4JDqm.js  1.CnAFxqlC.js  1.DCz6d2HK.js  1.Dh-N3BKR.js  1.DoCPxK0x.js  2.770HUsbj.js  2.B7oASl61.js  2.BbWg6X46.js  2.C7yYErJx.js  2.Cdu4zYf4.js  2.CrJXEkxi.js  2.CzTh0wuR.js  2.DMCGtrl2.js  2.DWdd2GK_.js  2.DlgXEeqx.js  2.SZmfUfFt.js  2.XwkUsfX6.js
gfmdesc/: .gitignore  CMakeLists.txt
gfmdesc/bindings/: libgfm2pst.cc
gfmdesc/cmark-gfm-in/: cmark-gfm_version.h.in
gfmdesc/src/: boj_stack.cc  boj_stack.h
include/: .gitignore
messages/: en.json  ko-kr.json
project.inlang/: project_id  settings.json
src/: app.css
src/lib/: i18n.ts
src/lib/commons/: default_styles.scss  gfmdescBridge.d.ts  paraglide.ts
src/lib/components/ClickToClipboard/: ClickToClipboard.svelte
src/lib/components/Selector/: Selector.svelte  SelectorItem.svelte  selector.ts
src/lib/components/i18n/: ChangeLanguage.svelte  changeLanguageSupport.d.ts
src/lib/gfmdesc/: bridge.ts
src/routes/: +layout.svelte  +page.svelte
